Changelog
=========

2.6 (unreleased)
----------------

- Nothing changed yet.


2.5 (2010-09-04)
----------------

- Extender doesn't generate interfaces twice anymore.
  [jensens]

- You can now set meta_type="Subtractive Workflow" (default is "Workflow")
  and state_var="confidential_state" for example (default is "review_state")
  on a workflow to use it with collective.subtractiveworkflow.
  [vincentfretin]

- Added roles and permissions protected sections in rolemap.xml.
  [vincentfretin]

- Replaced buggy odict implementation by the ordereddict implementation
  available in Python 2.7.
  [moldy]

- Unicode fixes for generated module info header.
  [moldy]

- Removed DeprecationWarning about the sets module.
  [vincentfretin]

- Header info: use better formatting for author.
  Encode module header strings so we don't choke on non-ASCII chars.
  [moldy]

- Make "dependend_profiles" alternative as multi-tgv available
  (avoid ultra-long tgvs).
  [jensens]

- Added virtual field type "keywords" which results in a LinesField with
  KeywordWidget (this needs a tgv catalog:index=1).
  [jensens]

- Prevent error on empty tgv.
  [hpeteragitator]


2.4.1 (2009-04-01)
------------------

- Fix wrong version '2.4-'.
  '2.4-' version was not fully uploaded.
  [vincentfretin]


2.4 (2009-04-01)
----------------

- Fix use of index:extras tagged-value
  [jensens]

- Enable easy plone.app.content.ATBlob subclassing.
  Add atblob stereotype to the profile.
  [jensens]

- Add stripogram (available as egg) as dependency.
  [jensens]

- Fix catalog assignment when catalogmultiples tagged valued is used.
  [erico_andrei]