@@ -4,7 +4,8 @@ Changelog
 2.6 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Added worklist:guard_expressions tag definition.
+  [vincentfretin]
 
 
 2.5 (2010-09-04)
